--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -10,8 +9,8 @@
 # production
 /build
 /studybooth
-.gitignore
 backend/env
+
 # misc
 .DS_Store
 .env.local
@@ -23,6 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
-=======
 node_modules/
->>>>>>> 57c0b059a8362cb148685143db331bfeaeb63612
+**/__pycache__/
+
