--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,13 @@ node_modules/
 *.pyc
 # **/db.sqlite3
 media/
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
 
 
