--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+#important commands
+# git rm -r --cached .
+# git add .
+
 # dependencies
 /node_modules
 /.pnp
