--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "CI ='' node scripts/build.js",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
