--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
+    "serve": "^13.0.2",
     "style-loader": "1.3.0",
     "styled-components": "^5.3.1",
     "terser-webpack-plugin": "4.2.3",
@@ -84,7 +85,7 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "serve -s build",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
