--- a/.gitignore
+++ b/.gitignore
@@ -18,13 +18,12 @@
 .env.test.local
 .env.production.local
 
-# npm-debug.log*
-# yarn-debug.log*
+npm-debug.log*
+yarn-debug.log*
 yarn-error.log*
-# package-lock.json
+package-lock.json
 /backend
 # **/__pycache__/
 # *.pyc
-
 frontend/
 backend/
