--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-onclickoutside": "^6.12.0",
     "react-redux": "^7.2.5",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.3.0",
